--- a/gestor-biblioteca-web/package.json
+++ b/gestor-biblioteca-web/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@angular-devkit/build-angular": "^18.1.2",
     "@angular/animations": "^18.1.0",
-    "@angular/cdk": "^18.1.0",
+    "@angular/cdk": "^18.2.3",
     "@angular/cli": "^18.1.2",
     "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
@@ -23,7 +23,9 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "angular2-text-mask": "^9.0.0",
     "gestor-biblioteca-web": "file:",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
